# anu

./: .flake8  .gitignore  CNAME  README.md  data.dvc  noxfile.py  pyproject.toml
.dvc/: config
docs/: conf.py  index.rst  reference.rst
notebooks/: dip_exploration.ipynb  model_test_drive.ipynb  pdb_exploration.ipynb  prepare_input.ipynb
notebooks/cnn/: events.out.tfevents.1591488012.Anks-MBP.78754.0
report/: README.md  main.bib  main.tex
report/graph/cnn/: graph.json  half-assed_joke.py  source.ast.json  source.mon
report/sections/: abstract.tex  acknowledgement.tex  data.tex  discussion.tex  introduction.tex  methods.tex  model.tex  results.tex
src/anu/: __init__.py
src/anu/cli/: main.py  predict.py  train.py
src/anu/cli/data/: __init__.py  fetch.py  prepare.py
src/anu/cli/utils/: __init__.py  download_bar.py
src/anu/constants/: amino_acid.py
src/anu/data/: __init__.py  data_operations.py  dataframe_operation.py
src/anu/data/pipelines/: prepare_input.py  process_raw_data.py
src/anu/features/: __init__.py
src/anu/models/: __init__.py
src/anu/models/cnn/: __init__.py  config.py  loader.py  model.py  pipeline.py  trainer.py
src/anu/parser/: __init__.py  mif25parser.py  test.mif25
src/anu/pipelines/: __init__.py  prepare_input.py  process_raw_apid_data.py  process_raw_data.py
src/hypermodern_python/cli/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_console.py
