[tool.poetry]
name = "Anu"
version = "0.1.0"
description = "Predicting interactions among protein, DNA and RNA."
authors = ["ank <hello@ankdev.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ankitskvmdam/anu"
repository = "https://github.com/ankitskvmdam/anu"
documentation = "https://github.com/ankitskvmdam/anu"
keywords = ["anu", "protein", "dna", "rna", "interactions", "machine learning", "deep learning"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"
marshmallow = "^3.3.0"
desert = "^2020.1.6"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}
torch = "^1.5.0"
pypdb = "^1.300"
biopython = "^1.76"
vaex-core = "^1.5.0"
nglview = "^2.7.5"
vaex-arrow = "^0.4.2"
matplotlib = "^3.2.1"
sacred = "^0.8.1"
hiplot = "^0.1.9"
nbformat = "^5.0.6"
pymex-lukasz99 = {git = "https://github.com/ankitskvmdam/pymex"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.8.5"
mypy = "^0.761"
pytype = {version = "^2020.1.8", python = "3.7"}
flake8-annotations = "^2.0.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
xdoctest = "^0.11.0"
sphinx = "^2.3.1"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.15"
notebook = "^6.0.3"
nbdime = "^2.0.0"
nox = "^2019.11.9 "
pre-commit = "^2.4.0"

[tool.poetry.scripts]
anu = "anu.cli.main:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["anu"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
